brain scores corrected

--- a/6. Calculate Brain and Questionnaire scores.ipynb
+++ b/6. Calculate Brain and Questionnaire scores.ipynb
@@ -16,12 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "c_folder_name = 'NIH/Emotion'\n",
-    "c_new_folder_name = 'PANLAB/Emotion'"
+    "c_new_folder_name = 'NIH/Emotion'"
    ]
   },
   {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "brain_scores = as.matrix(c_adj)%*%as.matrix(c_transform)\n",
-    "write.csv(data.frame('Subject' = rownames(brain_scores), brain_scores), file = paste('Data/Connectome/', c_folder_name, '/brain_scores.csv', sep = ''), row.names = FALSE)"
+    "write.csv(data.frame('Subject' = rownames(brain_scores), brain_scores), file = paste('Data/Connectome/', c_new_folder_name, '/brain_scores.csv', sep = ''), row.names = FALSE)"
    ]
   },
   {
@@ -74,17 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_folder_name = 'NIH'\n",
-    "q_new_folder_name = 'PANLAB'"
+    "q_new_folder_name = 'NIH'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,12 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "questionnaire_scores = as.matrix(q_adj)%*%as.matrix(q_transform)\n",
-    "write.csv(data.frame('Subject' = rownames(questionnaire_scores), questionnaire_scores), file = paste('Data/Questionnaire/', q_new_folder_name, '/questionnaire_scores.csv', sep = ''), row.names = FALSE)"
+    "write.csv(data.frame('Subject' = rownames(questionnaire_scores), questionnaire_scores), file = paste('Data/Connectome/', c_new_folder_name, '/questionnaire_scores.csv', sep = ''), row.names = FALSE)"
    ]
   }
  ],
