--- a/6. CI plots.ipynb
+++ b/6. CI plots.ipynb
@@ -1,17 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 104,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data = read.csv('Data/Connectome/NIH/Rest/RCCA/rcca_cor.csv', header = TRUE)"
+    "# Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "method = 'RCCA'\n",
+    "type = 'Rest'\n",
+    "data = read.csv(paste('Data/Connectome/NIH/', type,'/', method, '/rcca_cor.csv', sep = ''), header = TRUE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +41,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plot CI"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +61,17 @@
     "scale_fill_manual(values = c('red', 'blue'))+\n",
     "scale_color_manual(values = c('red', 'blue'))+\n",
     "ylab('correlation')+\n",
-    "ggtitle('RCCA best model 95% confidence intervals')\n",
-    "ggsave(file = 'Results/NIH/Rest/RCCA/rcca_CI.png', device = 'png', plot = plt, width = 6, height = 7)"
+    "ggtitle(paste(type, 'best model 95% confidence intervals'))\n",
+    "ggsave(file = paste('Results/NIH/', type, '/', method, '/', tolower(method), '_CI.png', sep = ''), device = 'png', plot = plt, width = 6, height = 7)\n",
+    "ggsave(file = paste('Data/Connectome/NIH/', type, '/', method, '/', tolower(method), '_CI.png', sep = ''), device = 'png', plot = plt, width = 6, height = 7)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
