--- a/1. Data preprocessing.ipynb
+++ b/1. Data preprocessing.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c_folder_name = 'NIH/Emotion'\n",
+    "task = 'Rest'\n",
     "ids_length = 6"
    ]
   },
@@ -37,12 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = list.files(paste('Data/Connectome/', c_folder_name,'/Raw', sep = ''))\n",
+    "files = list.files(paste('Data/Connectome/', task,'/Raw', sep = ''))\n",
     "c = c()\n",
     "c_ids = c()\n",
     "\n",
     "for(file in files){\n",
-    "    data = read.csv(paste('Data/Connectome/', c_folder_name, '/Raw/', file, sep = ''), header = FALSE)\n",
+    "    data = read.csv(paste('Data/Connectome/', task, '/Raw/', file, sep = ''), header = FALSE)\n",
     "    c_ids = append(c_ids, substr(file, 1, ids_length))\n",
     "    colnames(data) = NULL\n",
     "    c = rbind(c, data[upper.tri(data, diag = FALSE)])\n",
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write.csv(data.frame('Subject' = c_ids, c), file = paste('Data/Connectome/', c_folder_name, '/c.csv', sep = ''), row.names = FALSE)  "
+    "write.csv(data.frame('Subject' = c_ids, c), file = paste('Data/Connectome/', task, '/c.csv', sep = ''), row.names = FALSE)  "
    ]
   },
   {
@@ -78,10 +78,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = read.table(paste('Data/Questionnaire/questionnaire.csv', sep = ''), sep = ',', header = TRUE, row.names = 1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set up the folder that contains raw data."
+    "Save gender+motion information in *gender_motion.csv*."
    ]
   },
   {
@@ -90,14 +99,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_folder_name = 'NIH'"
+    "gender_motion = subset(data, select = c(Gender, motion_rest)) # use motion_emo for emotion and motion_rest for rest\n",
+    "colnames(gender_motion)[2] = 'Motion'\n",
+    "write.csv(data.frame('Subject' = rownames(gender_motion), gender_motion), file = paste('Data/Questionnaire/', task, '/gender_motion.csv', sep = ''), row.names = FALSE)  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Save questionnaire matrix and gender information in *q.csv* and *gender.csv*."
+    "Save family information in *family.csv*."
    ]
   },
   {
@@ -106,9 +117,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = read.csv(paste('Data/Questionnaire/', q_folder_name,'/Raw/questionnaire.csv', sep = ''), header = TRUE)\n",
-    "write.csv(subset(data, select = c(Subject, Gender)), file = paste('Data/Questionnaire/', q_folder_name, '/gender.csv', sep = ''), row.names = FALSE)  \n",
-    "write.csv(subset(data, select = -c(Gender, Age_in_Yrs)), file = paste('Data/Questionnaire/', q_folder_name, '/q.csv', sep = ''), row.names = FALSE)  "
+    "family = subset(data, select = c(Family_ID))\n",
+    "write.csv(data.frame('Subject' = rownames(family), family), file = paste('Data/Questionnaire/family.csv', sep = ''), row.names = FALSE)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save questionnaire in *q.csv*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = subset(data, select = -c(Family_ID, Gender, Age_in_Yrs, motion_rest, motion_emo))\n",
+    "write.csv(data.frame('Subject' = rownames(q), q), file = paste('Data/Questionnaire/q.csv', sep = ''), row.names = FALSE)  "
    ]
   }
  ],
